# c-demo

./: .gitignore  CMakeLists.txt  Makefile  arrays.h  arrays1.c  arrays2.c  arrays3.c  basic_types.c  basic_types.h  call_by.c  calloc1.c  cli_args.c  cli_args1.c  cli_args2.c  copy_by.c  free1.c  free2.c  func_pointer1.c  func_pointer2.c  func_pointer3.c  funcs.h  helloworld.c  main.c  malloc1.c  malloc2.c  objects1.c  pointers.h  pointers1.c  pointers2.c  pointers3.c  pointers4.c  realloc1.c  return_array1.c  return_array2.c  return_array3.c  simple.c  simple.h  string_funcs1.c  strings.c  strings.h  (+8 more)
